other-mpol/inject-coco-attestation-init/.chainsaw-test/config-map-default-values.yaml
apiVersion: v1
data:
  some_other_key: value
kind: ConfigMap
metadata:
  name: coco-config-defaults
  namespace: default
