other-mpol/inject-coco-attestation-init/.chainsaw-test/good-pod-with-coco-label-and-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    coco.io/init-config: coco-config
  labels:
    app: test-app
    coco: enabled
  name: good-pod-with-coco-label-and-annotation
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
