other-mpol/inject-coco-attestation-init/.chainsaw-test/pod-with-empty-init-config.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    coco.io/init-config: ""
  labels:
    app: test-app
    coco: enabled
  name: pod-with-empty-init-config
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
