other-mpol/inject-coco-attestation-init/.chainsaw-test/pod-without-coco-label.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    coco.io/init-config: coco-config
  labels:
    app: test-app
  name: pod-without-coco-label
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
