other-mpol/inject-coco-attestation-init/.chainsaw-test/pod-without-init-config-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-app
    coco: enabled
  name: pod-without-init-config-annotation
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
